--- a/900N/index.html
+++ b/900N/index.html
@@ -398,7 +398,7 @@ function load_GTABQ3(){
     out_jb = "RDRS";     load_poc();
 }
 
-function load_GTAExpulsive(){
+function load_GTAExp){
     progress.innerHTML="Payload loading... please wait";
     PLfile = "Expulsion-1.0-9.00.bin";
     out_jb = "RDRS";     load_poc();
@@ -520,7 +520,7 @@ function Bloader(){
 <button id="button-Payload" onMouseOver="progress.innerHTML='GTAV BeefQueefMod 1.33 by Adoherrent for 900 '"; onmouseout="progress.innerHTML='Status'" type="button" onclick="load_GTABQ()" style='font-size:20px;text-align:center;text-shadow: 4px 4px 4px black;color:white' > GTAV BQ </button>
 <button id="button-Payload" onMouseOver="progress.innerHTML='GTAV BeefQueefMod 1.34 by Adoherrent for 900 '"; onmouseout="progress.innerHTML='Status'" type="button" onclick="load_GTABQ2()" style='font-size:20px;text-align:center;text-shadow: 4px 4px 4px black;color:white' > GTAV BQ2 </button>
 <button id="button-Payload" onMouseOver="progress.innerHTML='GTAV BeefQueefMod 1.38 by Adoherrent for 900 '"; onmouseout="progress.innerHTML='Status'" type="button" onclick="load_GTABQ3()" style='font-size:20px;text-align:center;text-shadow: 4px 4px 4px black;color:white' > GTAV BQ3 </button>
-<button id="button-Payload" onMouseOver="progress.innerHTML='GTAV Expulsive 1.35 by Adoherrent for 900 '"; onmouseout="progress.innerHTML='Status'" type="button" onclick="load_GTAExpulsive()" style='font-size:20px;text-align:center;text-shadow: 4px 4px 4px black;color:white' > GTAV Expulsive </button>
+<button id="button-Payload" onMouseOver="progress.innerHTML='GTAV Expulsive 1.35 by Adoherrent for 900 '"; onmouseout="progress.innerHTML='Status'" type="button" onclick="load_GTAExpulsive()" style='font-size:20px;text-align:center;text-shadow: 4px 4px 4px black;color:white' > GTAV Exp</button>
 <!--<button id="button-Payload" onMouseOver="progress.innerHTML='GTAV Lamance 1.32 for 900 '"; onmouseout="progress.innerHTML='Status'" type="button" onclick="load_GTAL()" style='font-size:20px;text-align:center;text-shadow: 4px 4px 4px black;color:white' > GTAV L </button>-->
 <br><br>
 <button id="button-Payload" onMouseOver="progress.innerHTML='Red dead redemption 2 mod  menu 1.13 V1.3.4 by Adoherrent (R1 + Square) '"; onmouseout="progress.innerHTML='Status'" type="button" onclick="load_Oysters100()" style='font-size:20px;text-align:center;text-shadow: 4px 4px 4px black;color:red' > RDR2 V1.00 </button>
